--- a/ERP-DOM/erp/index.html
+++ b/ERP-DOM/erp/index.html
@@ -24,18 +24,18 @@
                 </button>
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
-                <ul class="nav navbar-nav">
+                <ul class="nav navbar-nav" id="menu">
                     <li class="active"><a href="#">Inicio</a></li>
                     <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Tiendas <span class="caret"></span></a>
                         <ul class="dropdown-menu" id="MenuShop">
                             
                         </ul>
                     </li>
-                    <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Categorias <span class="caret"></span></a>
+                    <!--<li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Categorias <span class="caret"></span></a>
                         <ul class="dropdown-menu" id="MenuCat">
                             
                         </ul>
-                        </li>
+                    </li>-->
                     <!--<li><a href="#">Page 2</a></li>
                     <li><a href="#">Page 3</a></li>-->
                 </ul>
