--- a/ERP-DOM/ejercicio2/menu.html
+++ b/ERP-DOM/ejercicio2/menu.html
@@ -10,7 +10,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-    <!--<nav class="navbar navbar-inverse">
+    <nav class="navbar navbar-inverse">
         <div class="container-fluid">
           <ul class="nav navbar-nav">
             <li class="active"><a href="#"><span class="glyphicon glyphicon-home"></span> Home</a></li>
@@ -26,7 +26,7 @@
             <li><a href="#"><span class="glyphicon glyphicon-earphone"></span> Contact</a></li>
           </ul>
         </div>
-      </nav>-->
+      </nav>
       
 	
 	<!--Contenido de la página (creado e introducido con javascript)-->
